# OpenGL_Scene

./: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Game.cpp  Game.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Quad.cpp  Quad.h  README.md  RectCuboid.cpp  RectCuboid.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  frag_old.txt  fragment_shader.glsl  main.cpp  vertex_shader.glsl
